Fixed some broken js refs for styling and javascript.  Part of the app refactoring.

--- a/MyCompany/site/index-5.html
+++ b/MyCompany/site/index-5.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Privacy Policy</title>
@@ -87,80 +87,7 @@
             </div>
         </div>
     </header>
-    <!--========================================================
-                              CONTENT
-    =========================================================-->
-    <section id="content">
-        <div class="container">
-            <div class="wrapper_4">
-                <div class="row">
-                    <div class="grid_4">
-                        <h2 class="header_3 text_7 color_6">
-                            Terms of Use
-                        </h2>
-
-                        <p class="color_10">
-                            Aenean nonummy hendrerit mauris. Phasellus <br/>
-                            porta. Fusce suscipit varius mi. Cum sociis natoque <br/>
-                            penatibus et magnis dis parturient montes, nascetur <br/>
-                            ridiculus mus. Nulla dui fusce feugiat malesuada <br/>
-                            odio. Morbi nunc odio, gravida at, cursus. <br/>
-                            <br/>
-                            Maecas tristie orci ac sem. Duis ultricies pharetra <br/>
-                            magna. Donec accumsan malesuada orci. Donec sit <br/>
-                            amet eros. Lorem ipsum dolort amet, consectetuer <br/>
-                            adipiscing elit. Mauris fermentum dictum magna. <br/>
-                            Sed laoreet aliquam leo. Ut tellus dolor. <br/>
-                            <br/>
-                            Aenean auctor wisi et urna. Aliquam erat volutpat. <br/>
-                            Duis ac turpis. Integer rum ante eu lacus. Quisque <br/>
-                            nulla. Vestibulum libero nisl, porta vel, scelerisque <br/>
-                            eget, malesuada at, neque vivamus eget.
-                        </p>
-                    </div>
-                    <div class="grid_8">
-                        <h2 class="header_3 text_7 color_6">Privacy Policy</h2>
-
-
-                        <dl class="terms-list">
-                            <dt class="text_8 color_1">Lorem ipsum dolor sit amet conse ctetur adipisin.</dt>
-                            <dd class="text_6 color_10">
-                                Suspendisse sollicitudin velit sed leo. Ut pharetra augue nec augue. Nam elit magna,
-                                henit sit amet, tincidunt ac, viverra sed, nulla. Donec porta diam eu massa. Quisque
-                                diam lorem, interdum vitae, dapibus ac, scelerisque vitae, pede. Donec eget tellus non
-                                erat lacinia fermentum. Donec in velit vel ipsum auctor pulvinar.
-                            </dd>
-                            <dt class="text_8 color_1">
-                                Nemo enim ipsam voluptatem quia voluptas sit aspern.
-                            </dt>
-                            <dd class="text_6 color_10">
-                                Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis in faucibus orci luctus et
-                                ultrices posuere cubilia curae. Suspendisse sollicitudin velit sed leo. Ut pharetra
-                                augue nec augue. Nam elit magna, hendrerit sit amet, tinci
-                                dunt ac, viverra sed, nulla. Donec porta diam eu massa. Quisque diam lorem, interdum
-                                vitae, dapibus. <br/>
-                                <br/>
-                                Vestibulum iaculis lacinia est. Proin dictum elementum velit. Fusce euismod consequat
-                                ante. Lorem ipsum dolor <br/>
-                                sit amet, consectetuer adipiscing elit. Pellentesque sed dolor. Aliquam congue fentum
-                                nisl. Mauris accumsan nulla vel diam. Sed in lacus ut enim adipiscing aliquet. Nulla
-                                venenatis. In pede mi, aliquet sit amet, euismod in, auctor ut,
-                            </dd>
-                            <dt class="text_8 color_1">Dolores eos qui ratione voluptatem sequi nesciunt.</dt>
-                            <dd class="text_6 color_10 last-child">
-                                Fusce euismod consequat ante. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-                                Pellentesque sed dolor. Aliquam congue fermentum nisl. Mauris accumsan nulla vel diam.
-                                Sed in lacus ut enim adipiscing aliquet. Nulla venenatis. In pede mi, aliquet sit amet,
-                                euismod in, auctor ut, ligula. Aliquam dapibus tincidunt metus. <br/>
-                                <br/>
-                                <a href="#">privacy@demolink.org</a>
-                            </dd>
-                        </dl>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    
 
     <!--========================================================
                               FOOTER
